[package]
name = "zilliqa-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32 = "0.8.1"
hex = "0.4.3"
sha2 = "0.9.8"
num-bigint = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.103"
serde_json = "1.0.69"
thiserror = "1.0.30"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
secp256k1 = { version = "0.22.1", features = ["rand-std"] }
scrypt = "0.10.0"
pbkdf2 = "0.11.0"
rand = "0.8.5"
cipher = "0.4.3"
aes = "0.8.1"
ctr = "0.9.1"
hmac = "0.11.0"
uuid = { version = "1.0.0", features = ["v4"] }

[lib]
crate-type = ["lib"]
name = "zilliqa_sdk"
